forgot paragraph oops!

--- a/washington-heights-dining-table/bengal_land/index.html
+++ b/washington-heights-dining-table/bengal_land/index.html
@@ -64,7 +64,7 @@
         }
 
         .essay h1 {
-            font-size: 30px;
+            font-size: 25px;
             color: #486a3f;
             text-align: center;
             margin-top: 0;
@@ -175,6 +175,9 @@
           </p>
           <p>
               The CPI(M) translated this rhetoric into an extensive land reform effort. The state dispossessed (in local vocabulary, vested) 104.5 lakh acres of land above legal ceilings for private ownership to 254.4 lakh beneficiaries. This amounted to around 8.2% of land being redistributed to 58.6% of households.<sup><a href="#footnote-4" id="ref-4">c4</a></sup> In the same era, the rest of the country had been experiencing a consolidation of land ownership: land markets elsewhere in India generally transferred land from smallholders to large landowners.<sup><a href="#footnote-5" id="ref-5">c5</a></sup> But even in the frame of land <i>markets</i>, Vikas Rawal’s 1977–1995 sample showed that West Bengal’s land transactions were decentralizing land ownership. Nonresident and large landowners sold the most and bought the least land; 32.5% of households that owned land in 1995 had been landless in 1977.<sup><a href="#footnote-6" id="ref-6">c6</a></sup> The state and even the market subverted an existing regime of capital accumulation: large-scale ownership of agrarian land.
+          </p>
+          <p class="indent">
+              The CPI(M)-led Left Front achieved many successes in its agrarian reform. It redistributed small plots of land to marginal and landless households. It improved sharecropping tenants’ rights. But rural poverty in West Bengal continued through the period, relations of production remained fundamentally exploitative, and the agrarian sector was structured to the end of capital accumulation in arrangements not present in the preceding period. In this paper, I provide an account of the state’s goals during the period when this regime of capital accumulation (section II), how this regime of capital accumulation managed to emerge in parallel with those goals (section III), and how that regime changed and new ones emerged in the neoliberal era starting at the turn of the millennium (section IV). While this paper provides an account of the fundamental mechanisms of these regimes of capital accumulation, further research is needed to understand their environmental impact and their intersectionality with caste.
           </p>
           <p class="bold">
               West Bengal's land reform assessed on its own terms
