--- a/washington-heights-dining-table/south_asian_lit/14/index.html
+++ b/washington-heights-dining-table/south_asian_lit/14/index.html
@@ -18,7 +18,6 @@
             font-family: 'Garamond';
             src: url('/fonts/garamond.ttf') format('truetype');
         }
-        }
         body {
             display: flex;
             flex-direction: column;
@@ -189,4 +188,5 @@
           <p style="margin-bottom: 100px">
               Whereas before Partition, Pooro was dead, Partition’s dissolution of religious social structures gave her life again.
           </p>
+    </body>
   </html>
