--- a/washington-heights-dining-table/south_asian_lit/6/index.html
+++ b/washington-heights-dining-table/south_asian_lit/6/index.html
@@ -161,7 +161,7 @@
           <p>by <a href="https://kovid-pal-odouard.github.io" class="link-element">Kovid Pal Odouard</a>!</p>
       </div>
       <div class="essay", style="margin-bottom: 20px; margin-top: 40px">
-        <p style="margin-bottom: 20px; text-align: center"><i>I wrote this in response to an in-class discussion on <u>Shatranj Ke Khilari</u>, which is Satyajit Ray's adaptation of Premchand's short story, "The Chess Players."</p>
+        <p style="margin-bottom: 20px; text-align: center"><i>I wrote this in response to an in-class discussion on <u>Shatranj Ke Khilari</u>, which is Satyajit Ray's adaptation of Premchand's short story, "The Chess Players."</i></p>
         <h1>Evolving thoughts on Satyajit Ray’s ending after seminar</h1>
       </div>
       <div class="essay">
