--- a/washington-heights-dining-table/south_asian_lit/7/index.html
+++ b/washington-heights-dining-table/south_asian_lit/7/index.html
@@ -161,7 +161,7 @@
           <p>by <a href="https://kovid-pal-odouard.github.io" class="link-element">Kovid Pal Odouard</a>!</p>
       </div>
       <div class="essay", style="margin-bottom: 20px; margin-top: 40px">
-        <p style="margin-bottom: 20px; text-align: center"><i>See what I wrote <u>on</u> Feburary 19 after seminar, when I made up my mind on how I felt about this.</p>
+        <p style="margin-bottom: 20px; text-align: center"><i>See what I wrote on Feburary 19 after seminar, when I made up my mind on how I felt about this.</i></p>
         <h1>Premchand's Village</h1>
       </div>
       <div class="essay">
