--- a/washington-heights-dining-table/index.html
+++ b/washington-heights-dining-table/index.html
@@ -154,7 +154,7 @@
     <div class="caption">
       <h2>a project from 'the history of iran'</h2>
       <p>imma keep this brief just because i am ready to move on to other things on this site... nothing against this class, the way prof. Baltacioglu-Brammer covered the territorialization of the sunni/shi'a divide in the early modern period was especially interesting. this paper was just of significance to me because it was the first time i'd done anything of this scale (other than the sociolinguistics)-- working long(ish) term on a single project in the humanities like that was very rewarding, and i'm thankful i did it in the moment i did. having done the writing i did in the spring semester and slowly formed the relationship with the act of historical scholarship i have, i think it came at the perfect time.</p>
-      <p><a href="https://kovid-pal-odouard.github.io/washington-heights-dining-table/mojahedin_khomeini/">A Portrait of the Place of Islam in the Discourses of Ruhollah Khomeini and the <i>Mojahedin-e-Khalq</i></a> (October-December, 2024)</p>
+      <p><a href="https://kovid-pal-odouard.github.io/washington-heights-dining-table/mojahedin_khomeini/">A Portrait of the Place of Islam in the Discourses of Ruhollah Khomeini and the <u>Mojahedin-e-Khalq</u></a> (October-December, 2024)</p>
 
     <div class="caption", style="text-align: center">
     <h2>...</h2>
@@ -173,7 +173,7 @@
         <h2>capitalism & geopolitics</h2>
         <p>this class's approach was predicated on the fact that in order for capitalism to exist, it requires a state monopoly on violence to enforce private property relations. therefore, in a world with multiple states, a history of capitalism is inextricable from states' relationships with one another. hence, capitalism and geopolitics. the class was a lecture taught by john shovlin, who used the course to hash out the points in his book on the topic. as a result it was the most organized, tightly woven class of my history education so far. great class. thanks john!</p>
         <p>i wrote two short papers for the class:</p>
-        <p>LINK COMING. A Constructed Protection Regime to Imperialist Ends: A Reading of James Anderson’s <i>The Interest of Great Britain with Regard to her American Colonies</i></a> (Late February, 2024)</p>
+        <p><a href="https://kovid-pal-odouard.github.io/washington-heights-dining-table/protection_regime/">A Constructed Protection Regime to Imperialist Ends: A Reading of James Anderson’s <i>The Interest of Great Britain with Regard to her American Colonies</i></a> (Late February, 2024)</p>
         <p>LINK COMING. Trump's New Policy Towards Dollar Hegemony</a> (May 5-10, 2024)</p>
       </div>
 
