--- a/washington-heights-dining-table/index.html
+++ b/washington-heights-dining-table/index.html
@@ -144,7 +144,7 @@
       <p>this is why i wanted to write about him: a life led through the embodiment of a philosophical defacement of existing rigid social structures is something worth learning from, even though those social structures are alien to ours today. i think part of the language that struck me here was the formulation of the tendency of <u>*life*</u> against a constructed social sphere.. this defintiely feels like a dubious dichotomy in general and a dubious one to characterize Diogenes' self conception, but it struck me in conversation with some of the stuff i did last spring, like <a href="https://kovid-pal-odouard.github.io/thevillage-2024/tompkins_elegy/">an overly academic elegy for life lived at tompkins sq,</a> <a href="https://kovid-pal-odouard.github.io/thevillage-2024/coetzee/">this brief piece</a> on Coetzee's <u>*Life & Times of Michael K*</u>, and <a href="https://kovid-pal-odouard.github.io/thevillage-2024/brecht/">this one</a> on some Brecht poems. so, i wrote some lessons for anti-capitalist organizing from Diogenes of Sinope.</p>
       <p><u>paper one:</u> <a href="https://kovid-pal-odouard.github.io/washington-heights-dining-table/diogenes/">Lessons from Diogenes on Anticapitalist Organizing</a>, (november 9, 2024)</p>
       <p>the next paper maybe kinda worth putting up here from this class is just a reading of Plato's <u>*Euthyphro*</u>, which looks at it as having a pedagogical purpose. basically, against an analytic reading of Plato's <u>*literary production*</u> (because that's what it is). very much the kind of understanding that prof. Vincent Renzi imparted on us (which I liked!)</p>
-      <p><u>paper two:</u> <a href="https://kovid-pal-odouard.github.io/washington-heights-dining-table/euthyphro/">Plato's *Euthyphro* as a Pedagogical Tool</a> (december 11, 2024)</p>
+      <p><u>paper two:</u> <a href="https://kovid-pal-odouard.github.io/washington-heights-dining-table/euthyphro/">Plato's <i>Euthyphro</i> as a Pedagogical Tool</a> (december 11, 2024)</p>
     </div>
 
     <div class="caption">
@@ -158,7 +158,7 @@
     <div class="caption">
       <h2>a project from 'the history of iran'</h2>
       <p>imma keep this brief just because i am ready to move on to other things on this site... nothing against this class, the way prof. Baltacioglu-Brammer covered the territorialization of the sunni/shi'a divide in the early modern period was especially interesting. this paper was just of significance to me because it was the first time i'd done anything of this scale (other than the sociolinguistics)-- working long(ish) term on a single project in the humanities like that was very rewarding, and i'm thankful i did it in the moment i did. having done the writing i did in the spring semester and slowly formed the relationship with the act of historical scholarship i have, i think it came at the perfect time.</p>
-      <p><a href="https://kovid-pal-odouard.github.io/washington-heights-dining-table/mojahedin_khomeini/">A Portrait of the Place of Islam in the Discourses of Ruhollah Khomeini and the <u>Mojahedin-e-Khalq</u></a> (October-December, 2024)</p>
+      <p><a href="https://kovid-pal-odouard.github.io/washington-heights-dining-table/mojahedin_khomeini/">A Portrait of the Place of Islam in the Discourses of Ruhollah Khomeini and the <i>Mojahedin-e-Khalq</i></a> (October-December, 2024)</p>
 
     <div class="caption", style="text-align: center">
     <h2>...</h2>
