--- a/washington-heights-dining-table/index.html
+++ b/washington-heights-dining-table/index.html
@@ -16,7 +16,7 @@
         }
         @font-face {
             font-family: 'Bangla';
-            src: url('/fonts/Alkatra-Bold.ttf') format('truetype');
+            src: url('/fonts/Alkatra-Regular.ttf') format('truetype');
         }
 
         body {
@@ -192,7 +192,7 @@
         <h2>south asian literature</h2>
         <p>all i can say is that it was nice spending a semester in this literature. here are my weekly reflections: some are written for a seminar, some are written reflecting on the discussion in seminar. if they include the second person, it's addressed to my professor, Gabriela Ilieva.</p>
         <p><a href="https://kovid-pal-odouard.github.io/washington-heights-dining-table/south_asian_lit/1">(1)</a> Patriarchy at the metaphysical level in Tagore's conception of beauty and nature (for january 29, 2025)</p>
-        <p><a href="https://kovid-pal-odouard.github.io/washington-heights-dining-table/south_asian_lit/2">(2)</a> <span class="Bangla">পরদেশী/স্বদেশী:</span> Tagore's rhetorical choice (on january 29, 2025)</p>
+        <p><a href="https://kovid-pal-odouard.github.io/washington-heights-dining-table/south_asian_lit/2">(2)</a> <span class="Bangla">পরদেশী/স্বদেশী</span> Tagore's rhetorical choice (on january 29, 2025)</p>
         <p><a href="https://kovid-pal-odouard.github.io/washington-heights-dining-table/south_asian_lit/3">(3)</a> The ethics of translating infamous life into literature, as explored by Mirza Ruswa in 1899 (for february 5, 2025)</p>
         <p><a href="https://kovid-pal-odouard.github.io/washington-heights-dining-table/south_asian_lit/4">(4)</a> Thinking about some relationships with prose as a form mentioned in class (on february 5, 2025)</p>
         <p><a href="https://kovid-pal-odouard.github.io/washington-heights-dining-table/south_asian_lit/5">(5)</a> Premchand translated into film: Satyajit Ray’s opening scene & prose over ghazal (for february 12, 2025)</p>
