--- a/washington-heights-dining-table/index.html
+++ b/washington-heights-dining-table/index.html
@@ -188,7 +188,7 @@
         <p><a href="https://kovid-pal-odouard.github.io/washington-heights-dining-table/bengal_land/">Evolving Modes of Capital Accumulation in Agrarian West Bengal</a> (February-May, 2024)</p>
       </div>
 
-      <div class="caption">
+      <div class="caption" style="margin-bottom: 100px">
         <h2>south asian literature</h2>
         <p>all i can say is that it was nice spending a semester in this literature. here are my weekly reflections: some are written for a seminar, some are written reflecting on the discussion in seminar. if they include the second person, it's addressed to my professor, Gabriela Ilieva.</p>
         <p><a href="https://kovid-pal-odouard.github.io/washington-heights-dining-table/south_asian_lit/1">(1)</a> Patriarchy at the metaphysical level in Tagore's conception of beauty and nature (for january 29, 2025)</p>
@@ -199,21 +199,21 @@
         <p><a href="https://kovid-pal-odouard.github.io/washington-heights-dining-table/south_asian_lit/6">(6)</a> Evolving thoughts on Satyajit Ray’s ending after seminar (on february 12, 2025)</p>
         <p><a href="https://kovid-pal-odouard.github.io/washington-heights-dining-table/south_asian_lit/7">(7)</a> Premchand’s Village (for february 19, 2025)</p>
         <p><a href="https://kovid-pal-odouard.github.io/washington-heights-dining-table/south_asian_lit/8">(8)</a> More trouble with Premchand’s Rural subjectivities< (on february 19, 2025)</p>
-        <p><a href="https://kovid-pal-odouard.github.io/washington-heights-dining-table/south_asian_lit/9">(9)</a> Yashpal against asceticism and nature’s <u>consummation</u> (for february 26, 2025)</p>
+        <p><a href="https://kovid-pal-odouard.github.io/washington-heights-dining-table/south_asian_lit/9">(9)</a> Yashpal against asceticism and nature’s <i>consummation</i> (for february 26, 2025)</p>
         <p><a href="https://kovid-pal-odouard.github.io/washington-heights-dining-table/south_asian_lit/10">(10)</a> Yashpal's women and his goal as a social critic (on february 26, 2025)</p>
         <p><a href="https://kovid-pal-odouard.github.io/washington-heights-dining-table/south_asian_lit/11">(11)</a> Sadaat Hasan Manto: Formal invention in response to the trauma of Partition (for march 5, 2025)</p>
         <p><a href="https://kovid-pal-odouard.github.io/washington-heights-dining-table/south_asian_lit/12">(12)</a> The changing shape of Ismat Chughtai’s prose in “Roots:” Botanical and Animal (on march 5, 2025)</p>
         <p><a href="https://kovid-pal-odouard.github.io/washington-heights-dining-table/south_asian_lit/13">(13)</a> No in between (on march 12, 2025)</p>
-        <p><a href="https://kovid-pal-odouard.github.io/washington-heights-dining-table/south_asian_lit/14">(14)</a> An Unexpected Effect of Partition in Amrita Pritam’s <u>Pinjar</u> (for march 19, 2025)</p>
+        <p><a href="https://kovid-pal-odouard.github.io/washington-heights-dining-table/south_asian_lit/14">(14)</a> An Unexpected Effect of Partition in Amrita Pritam’s <i>Pinjar</i> (for march 19, 2025)</p>
         <p><a href="https://kovid-pal-odouard.github.io/washington-heights-dining-table/south_asian_lit/15">(15)</a> Ismat Chughtai, Amrita Pritam, and portraying gendered subjugation (for april 2, 2025)</p>
         <p><a href="https://kovid-pal-odouard.github.io/washington-heights-dining-table/south_asian_lit/16">(16)</a> Ismat Chughtai was not a feminist (on april 2, 2025)</p>
         <p><a href="https://kovid-pal-odouard.github.io/washington-heights-dining-table/south_asian_lit/17">(17)</a> Dopdi/Draupadi: reinventing canon (for april 9, 2025)</p>
         <p><a href="https://kovid-pal-odouard.github.io/washington-heights-dining-table/south_asian_lit/18">(18)</a> A note on translation (on april 2, 2025)</p>
-        <p><a href="https://kovid-pal-odouard.github.io/washington-heights-dining-table/south_asian_lit/19">(19)</a> Re-reading <u>Lihaaf's</u> Narration (on april 9, 2025)</p>
+        <p><a href="https://kovid-pal-odouard.github.io/washington-heights-dining-table/south_asian_lit/19">(19)</a> Re-reading <i>Lihaaf's</i> Narration (on april 9, 2025)</p>
         <p><a href="https://kovid-pal-odouard.github.io/washington-heights-dining-table/south_asian_lit/20">(20)</a> Erasing the second generation and insulting the first: my disgust for Susham Bedi’s <u>Havan</u> (for april 16, 2025)</p>
         <p><a href="https://kovid-pal-odouard.github.io/washington-heights-dining-table/south_asian_lit/21">(21)</a> Begum Rokeya Sakhawat Hossain’s invitation to imagine (on april 16, 2025)</p>
-        <p><a href="https://kovid-pal-odouard.github.io/washington-heights-dining-table/south_asian_lit/22">(22)</a> Reading nature in Vijay Dan Detha’s <u>The Dilemma</u> (for april 23, 2025)</p>
-        <p><a href="https://kovid-pal-odouard.github.io/washington-heights-dining-table/south_asian_lit/23">(23)</a> Subjectivity and Archetype in Vijay Dan Detha’s <u>The Dilemma</u> (on april 23, 2025)</p>
-        <p><a href="https://kovid-pal-odouard.github.io/washington-heights-dining-table/south_asian_lit/24">(24)</a> Female Divinity out of the male gaze? A strange moment in K.P. Ramanunni’s <u>What the Sufi Said</u> (for april 30, 2025)</p>
+        <p><a href="https://kovid-pal-odouard.github.io/washington-heights-dining-table/south_asian_lit/22">(22)</a> Reading nature in Vijay Dan Detha’s <i>The Dilemma</i> (for april 23, 2025)</p>
+        <p><a href="https://kovid-pal-odouard.github.io/washington-heights-dining-table/south_asian_lit/23">(23)</a> Subjectivity and Archetype in Vijay Dan Detha’s <i>The Dilemma</i> (on april 23, 2025)</p>
+        <p><a href="https://kovid-pal-odouard.github.io/washington-heights-dining-table/south_asian_lit/24">(24)</a> Female Divinity out of the male gaze? A strange moment in K.P. Ramanunni’s <i>What the Sufi Said</i> (for april 30, 2025)</p>
     </div>
 </html>
