--- a/washington-heights-dining-table/index.html
+++ b/washington-heights-dining-table/index.html
@@ -178,7 +178,7 @@
         <p>this class's approach was predicated on the fact that in order for capitalism to exist, it requires a state monopoly on violence to enforce private property relations. therefore, in a world with multiple states, a history of capitalism is inextricable from states' relationships with one another. hence, capitalism and geopolitics. the class was a lecture taught by john shovlin, who used the course to hash out the points in his book on the topic. as a result it was the most organized, tightly woven class of my history education so far. great class. thanks john!</p>
         <p>i wrote two short papers for the class:</p>
         <p><a href="https://kovid-pal-odouard.github.io/washington-heights-dining-table/protection_regime/">A Constructed Protection Regime to Imperialist Ends: A Reading of James Anderson’s <i>The Interest of Great Britain with Regard to her American Colonies</i></a> (Late February, 2024)</p>
-        <p>LINK COMING. Trump's New Policy Towards Dollar Hegemony</a> (May 5-10, 2024)</p>
+        <p><a href="https://kovid-pal-odouard.github.io/washington-heights-dining-table/trump_dollar/">Trump’s New Policy Towards Dollar Hegemony</a> (May 5-10, 2024)</p>
       </div>
 
       <div class="caption">
@@ -191,8 +191,8 @@
       <div class="caption" style="margin-bottom: 100px">
         <h2>south asian literature</h2>
         <p>all i can say is that it was nice spending a semester in this literature. here are my weekly reflections: some are written for a seminar, some are written reflecting on the discussion in seminar. if they include the second person, it's addressed to my professor, Gabriela Ilieva.</p>
-        <p><a href="https://kovid-pal-odouard.github.io/washington-heights-dining-table/south_asian_lit/1">(1)</a> Patriarchy at the metaphysical level in Tagore's conception of beauty and nature (for january 29, 2025)</p>
-        <p><a href="https://kovid-pal-odouard.github.io/washington-heights-dining-table/south_asian_lit/2">(2)</a> <span class="Bangla">পরদেশী/স্বদেশী</span> Tagore's rhetorical choice (on january 29, 2025)</p>
+        <p><a href="https://kovid-pal-odouard.github.io/washington-heights-dining-table/south_asian_lit/1">(1)</a> Patriarchy at the metaphysical level in Tagore's conception of beauty and nature (for january 29, 2025)
+        <a href="https://kovid-pal-odouard.github.io/washington-heights-dining-table/south_asian_lit/2">(2)</a> <span class="Bangla">পরদেশী/স্বদেশী</span> Tagore's rhetorical choice (on january 29, 2025)</p>
         <p><a href="https://kovid-pal-odouard.github.io/washington-heights-dining-table/south_asian_lit/3">(3)</a> The ethics of translating infamous life into literature, as explored by Mirza Ruswa in 1899 (for february 5, 2025)</p>
         <p><a href="https://kovid-pal-odouard.github.io/washington-heights-dining-table/south_asian_lit/4">(4)</a> Thinking about some relationships with prose as a form mentioned in class (on february 5, 2025)</p>
         <p><a href="https://kovid-pal-odouard.github.io/washington-heights-dining-table/south_asian_lit/5">(5)</a> Premchand translated into film: Satyajit Ray’s opening scene & prose over ghazal (for february 12, 2025)</p>
